--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     function showMessage() {
       swal({
         title: "Đôi lời yêu thương", // Tiêu đề của popup
-        text: "Giáng Sinh anh lành nhé!! Chúc bạn có một ngày Giáng Sinh vui vẻ bên gia đình và những người thân yêu. Chúc cả lò nhà bạn 8386 6283 luôn cười haha và sức khỏe dồn dào bạn nhé!!! Merry Christmas ❤️️❤️️❤️️", // Nội dung lời nhắn
+        text: "Giáng Sinh anh lành nhé!! \n Chúc bạn có một ngày Giáng Sinh vui vẻ bên gia đình và những người thân yêu. Chúc cả lò nhà bạn 8386 6283 luôn cười haha và sức khỏe dồn dào bạn nhé!!! Merry Christmas ❤️️❤️️❤️️", // Nội dung lời nhắn
         button: {
           text: "~ From MLinh with love ~",
         },
