--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         title: "Đôi lời yêu thương", // Tiêu đề của popup
         text: "Giáng Sinh anh lành nhé!! \n Chúc bạn có một ngày Giáng Sinh vui vẻ bên gia đình và những người thân yêu. Chúc cả lò nhà bạn 8386 6283 luôn cười haha và sức khỏe dồn dào bạn nhé!!! \n Merry Christmas ❤️️❤️️❤️️", // Nội dung lời nhắn
         button: {
-          text: "~ From MLinh with love ~",
+          text: "~ From MLinh with luv ~",
         },
       });
     }
