--- a/index.html
+++ b/index.html
@@ -24,25 +24,62 @@
       class="cloud" alt="cloud" />
     <img
       src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/cloud.png?alt=media&token=acc83aac-8e9c-4783-8c6f-2a2531257d38"
-      class="cloud" alt="cloud" />
+      class="cloud" alt="cloud" style="top: 140px;
+    left: 300px;"/>
     <img
       src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/cloud.png?alt=media&token=acc83aac-8e9c-4783-8c6f-2a2531257d38"
-      class="cloud" alt="cloud" />
+      class="cloud" alt="cloud" style="top: 62px;left: 500px;"/>
+    <img
+      src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/cloud.png?alt=media&token=acc83aac-8e9c-4783-8c6f-2a2531257d38"
+      class="cloud" alt="cloud" style="top: 82px;left: 700px;"/>
+    <img
+      src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/cloud.png?alt=media&token=acc83aac-8e9c-4783-8c6f-2a2531257d38"
+      class="cloud" alt="cloud" style="top: 42px;left: 900px;"/>
+      <img
+      src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/cloud.png?alt=media&token=acc83aac-8e9c-4783-8c6f-2a2531257d38"
+      class="cloud" alt="cloud" style="top: 102px;left: 1200px;"/> 
   </div>
   <div class="santa-container">
+    <h1 style="
+    color: white;
+    font-family: serif;
+    font-size: 16px;
+    position: relative;
+    left: 39px;
+">click vào chữ nhé
+    </h1>
     <img
       src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/santa.png?alt=media&token=a81ad9d6-4f75-498e-9ba4-3e28673c942f"
       class="santa" alt="Santa" />
   </div>
   <div class="christmas-content">
-    <h1 style="cursor: pointer;" onclick="showMessage()" class="christmas-title">Merry Christmas</h1>
+    <h1 style="cursor: pointer;" onclick="showMessage()" class="christmas-title">Merry Christmas Đặng Kiều Trang</h1>
     <div class="christmas-tree">
       <div class="tree">
         <div class="star-top">⭐</div>
         <img
           src="https://firebasestorage.googleapis.com/v0/b/webai-54992.appspot.com/o/pineTree.png?alt=media&token=2d82b851-6e4e-4518-a7a8-e06126b47e34"
           class="pine-tree-img" alt="Christmas Tree" />
-        <div class="bells-container"></div>
+        <div class="bells-container">
+          <img src="img/img1.jpg" style="left: 228px;
+          position: relative;
+          top: 121px;"/>
+          <img src="img/img2.jpg" style="position: relative;
+          top: 171px;
+          left: 53px;"/>
+          <img src="img/img3.jpg" style="left: -40px;
+          position: relative;
+          top: 344px;"/>
+          <img src="img/img4.jpg" style="right: 26px;
+          position: relative;
+          top: 7px;"/>
+          <img src="img/img5.jpg" style="left: -52px;
+          position: relative;
+          top: 256px;"/>
+          <img src="img/img6.jpg" style="position: relative;
+          top: 402px;
+          left: -74px;"/>
+        </div>
       </div>
     </div>
   </div>
@@ -57,9 +94,9 @@
     function showMessage() {
       swal({
         title: "Đôi lời yêu thương", // Tiêu đề của popup
-        text: "Giáng Sinh anh lành nhé!! \n Chúc bạn có một ngày Giáng Sinh vui vẻ bên gia đình và những người thân yêu. Chúc cả lò nhà bạn 8386 6283 luôn cười haha và sức khỏe dồn dào bạn nhé!!! \n Merry Christmas ❤️️❤️️❤️️", // Nội dung lời nhắn
+        text: "Giáng Sinh anh lành nhé!! \n Chúc em có một ngày Giáng Sinh vui vẻ ngập tràn tiếng cười và niềm vui. Chúc em lúc nào cũng xinh đẹp và không được tự chê mình xấu nữa nhé!!! \n Merry Christmas ❤️️❤️️❤️️", // Nội dung lời nhắn
         button: {
-          text: "~ From MLinh with luv ~",
+          text: "~ From Pham Tien Tam ~",
         },
       });
     }
